--- a/styles/index.less
+++ b/styles/index.less
@@ -7,7 +7,8 @@
   display: flex;
   flex-direction: column;
   >.pyg_header{
-      height: 45px;   
+      height: 45px; 
+      padding: 5px;  
   }
   >.pyg_content{
     flex: 1;
