--- a/styles/index.css
+++ b/styles/index.css
@@ -102,10 +102,65 @@ ul {
 .layout > .pyg_header {
   height: 45px;
   padding: 5px;
+  background-color: #eee;
 }
 .layout > .pyg_content {
   flex: 1;
-  background-color: #444;
+  background-color: #eee;
+}
+.layout > .pyg_content > .pyg_nav {
+  display: flex;
+  background-color: #fff;
+}
+.layout > .pyg_content > .pyg_nav > a {
+  display: block;
+  width: 25%;
+  text-align: center;
+  padding: 5px;
+  color: #000;
+}
+.layout > .pyg_content > .pyg_nav > a > img {
+  width: 50%;
+}
+.layout > .pyg_content > .pyg_goodsList {
+  padding: 10px;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox {
+  width: 100%;
+  padding-bottom: 5px;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox > img {
+  width: 100%;
+  display: block;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox > .pyg_sbox {
+  width: 49%;
+  margin-top: 10px;
+  float: left;
+  background-color: #fff;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox > .pyg_sbox > .pgy_good {
+  width: 100%;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox > .pyg_sbox > .pgy_good > img {
+  width: 100%;
+  display: block;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox > .pyg_sbox > .pgy_good > .pgy_desc {
+  color: #333;
+  font-size: 13px;
+  margin: 5px 0;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox > .pyg_sbox > .pgy_good > .pyg_price {
+  color: red;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox > .pyg_sbox > .pyg_btncate {
+  width: 80%;
+  display: block;
+  margin: 5px auto;
+}
+.layout > .pyg_content > .pyg_goodsList .pyg_pbox > .pyg_sbox:nth-of-type(even) {
+  margin-left: 2%;
 }
 .layout > .pyg_footer {
   background-color: red;
