--- a/styles/index.less
+++ b/styles/index.less
@@ -1,27 +1,7 @@
 @import './reset.less';
+@import './common.less';
 
-//全局
-.layout {
-  max-width: 640px;
-  width: 100vw;
-  height: 100vh;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-
-  //头部
-  >.pyg_header {
-    height: 45px;
-    padding: 5px;
-    background-color: #eee;
-  }
-
-  //中间
-  >.pyg_content {
-    flex: 1;
-    background-color: #eee;
-
-    >.pyg_nav {
+    .pyg_nav {
       display: flex;
       background-color: #fff;
 
